# geotify

./: .gitignore  .pre-commit-config.yaml  CONVENTION.md  README.md  pyproject.toml  requirements.in  requirements.txt  requirments.txt  setup.py
.github/workflows/: unittest.yaml
asset/: skorea_municipalities_geo_simple.json  인구밀도_20240309190931.csv
geotifing/: compatibility.py  utils.py
geotifing/test/: test_map.py
geotify/: README.md  command.py  compatibility.py  geotify.toml  map.py  utils.py
geotify/datasets/: Map_Korea.json  TL_SCCO_CTPRVN.json  incheon.csv  강원도.csv  서울_인구밀도.csv  세대당_인구수_및_인구밀도_한국인__20240407113734.csv  인구밀도.csv  인구밀도_20240309190931.csv  전북특별자치도_인구밀도.csv
src/: map.py
test/: test.py  test_map.py
